--- a/public/offline.html
+++ b/public/offline.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Offline - Bill Splitter</title>
+  <title>Offline - SplitScan</title>
   <style>
     * {
       margin: 0;
